--- a/html/index.html
+++ b/html/index.html
@@ -4,49 +4,131 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="C:\Users\Asus\OneDrive\Desktop\Raj Sir\css\style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+<style>
+    body {
+        margin: 0;
+        padding: 0;
+        min-height: 100vh; /* Change height to min-height for full-height background */
+        display: flex;
+        flex-direction: column;
+    }
+
+    footer {
+        background-color: rgb(0, 0, 43);
+        color: #fff;
+        text-align: center;
+        padding: 20px;
+        position: fixed;
+        bottom: 0;
+        width: 100%;
+    }
+
+    .logo-container {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 20px; /* Add margin for spacing */
+    }
+
+    .logo-container img {
+        max-width: 100%;
+        height: auto;
+        width: 160px; /* Adjust the width as needed */
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: center;
+        margin-top: 15px;
+    }
+
+    .navbar ul {
+        list-style: none;
+        padding: 0;
+        display: flex;
+        flex-wrap: wrap; /* Allow items to wrap to the next line on small screens */
+        justify-content: center;
+    }
+
+    .navbar li {
+        margin: 0 15px;
+    }
+
+    .navbar a {
+        
+        text-decoration: none;
+        font-size: 25px;
+        color:  rgb(184, 194, 204);
+        height: 30px;
+        font-weight: 300px;
+    }
+
+    .navbar a:hover {
+        /* Add underline effect on hover */
+        color: orange;
+        text-decoration: underline;
+    }
+
+    /* Media query for smaller screens */
+    @media only screen and (min-width: 768px) {
+        .navbar li {
+            display : inline-block;
+            margin: 0 15px; /* Add space between vertical items */
+        }
+    }
+
+    .social-icons {
+        display: flex;
+        justify-content: center;
+        margin-top: 20px;
+    }
+
+    .icon {
+        margin: 0 15px;
+    }
+
+    .copyright {
+        margin-top: 20px;
+    }
+
+    
+</style>
 </head>
 <body>
-    <header class="page-header bg-white shadow-lg" id="page-header">
-        <div class="container flex items-center">
-            <a href="#">
-                    <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\www.sdintl.com\www.sdintl.com\wp-content\uploads\2018\09\Black White Simple Monochrome Initial Name Logo (2).svg" class="logo" alt="Company Logo">
-                </a>
-
-            <i class="fas fa-bars mobile-nav-open" @click="toggleMobileNav"></i>
-
-            <nav class="primary-navigation" id="primary-navigation">
-                <i class="fas fa-times mobile-nav-close" :class="{'hidden' : !mobileNavOpen}" @click="toggleMobileNav"></i>
-                <ul class="primary-menu" id="primary-menu">
-                    <li id="menu-item-493" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-493"><a href="#">About</a>
-                        <ul class="sub-menu">   
-                        </ul>
-                    </li>
-                    <li id="menu-item-492" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children menu-item-492"><a href="#">Services</a>
-                        <ul class="sub-menu">
-                        </ul>
-                    </li>
-                    <li id="menu-item-1034" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-1034"><a href="#">Gallery</a></li>
-                    </li>
-                    <li class="menu-item">
-                        <a href="#" class="btn-contact"><span>Contact</span></a>
-                    </li>
-
-                    <li class="contact-item">
-                        <i class="fas fa-mobile-alt"></i>
-                        <div>
-                            561.288.4079 </div>
-                    </li>
-
-                    <li class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <address>
-            <strong>Global Headquarters</strong><br />
-2500 N. Military Trail, Suite 318<br />
-Boca Raton, FL  33431            </address>
-                    </li>
-                </ul>
-            </nav>
+    <!-- Start of the Footer of the website -->
+    <footer>
+        <div class="logo-container">
+            <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\RGLOGO.png" alt="Logo">
         </div>
-    </header>
+
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+
+        <div class="social-icons">
+            <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-facebook" viewBox="0 0 16 16">
+                <path d="M16 8.049c0-4.446-3.582-8.05-8-8.05C3.58 0-.002 3.603-.002 8.05c0 4.017 2.926 7.347 6.75 7.951v-5.625h-2.03V8.05H6.75V6.275c0-2.017 1.195-3.131 3.022-3.131.876 0 1.791.157 1.791.157v1.98h-1.009c-.993 0-1.303.621-1.303 1.258v1.51h2.218l-.354 2.326H9.25V16c3.824-.604 6.75-3.934 6.75-7.951z"/>
+              </svg></a>
+
+            <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-twitter" viewBox="0 0 16 16">
+                <path d="M5.026 15c6.038 0 9.341-5.003 9.341-9.334 0-.14 0-.282-.006-.422A6.685 6.685 0 0 0 16 3.542a6.658 6.658 0 0 1-1.889.518 3.301 3.301 0 0 0 1.447-1.817 6.533 6.533 0 0 1-2.087.793A3.286 3.286 0 0 0 7.875 6.03a9.325 9.325 0 0 1-6.767-3.429 3.289 3.289 0 0 0 1.018 4.382A3.323 3.323 0 0 1 .64 6.575v.045a3.288 3.288 0 0 0 2.632 3.218 3.203 3.203 0 0 1-.865.115 3.23 3.23 0 0 1-.614-.057 3.283 3.283 0 0 0 3.067 2.277A6.588 6.588 0 0 1 .78 13.58a6.32 6.32 0 0 1-.78-.045A9.344 9.344 0 0 0 5.026 15z"/>
+              </svg></a>
+
+            <a href="#" class="icon"><svg xmlns="http://www.w3.org/2000/svg" width="35" height="35" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854V1.146zm4.943 12.248V6.169H2.542v7.225h2.401zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248-.822 0-1.359.54-1.359 1.248 0 .694.521 1.248 1.327 1.248h.016zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016a5.54 5.54 0 0 1 .016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225h2.4z"/>
+              </svg></a>
+        </div>
+
+        <p class="copyright">&copy; 2023 Your Company. All rights reserved.</p>
+    </footer>
+    <!-- End of Footer of the website -->
 </body>
 </html>
