--- a/html/index.html
+++ b/html/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="service.css">
     <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="about.css" />
+    <link rel="stylesheet" href="service.css" />
+    <link rel="stylesheet" href="contact.css" />
+    <link rel="stylesheet" href="footer.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
      <!-- Fontawesome CDN Link -->
@@ -126,19 +130,226 @@ nav button {
   color: white;
 }
 
-.nav-logo{
+.navbar-logo{
   width: 7.5vh;
   height: 7.5vh;
 }
+
+:root {
+  --navbar-bg-color: hsl(0, 0%, 15%);
+  --navbar-text-color: hsl(0, 0%, 85%);
+  --navbar-text-color-focus: white;
+  --navbar-bg-contrast: hsl(0, 0%, 25%);
+}
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+body {
+  height: 100vh;
+  font-family: Arial, Helvetica, sans-serif;
+  line-height: 1.6;
+}
+.container {
+  max-width: 1000px;
+  padding-left: 1.4rem;
+  padding-right: 1.4rem;
+  margin-left: auto;
+  margin-right: auto;
+}
+#navbar {
+  --navbar-height: 64px;
+  position: fixed;
+  height: var(--navbar-height);
+  background-color: var(--navbar-bg-color);
+  left: 0;
+  right: 0;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.15);
+}
+.navbar-container {
+  display: flex;
+  justify-content: space-between;
+  height: 100%;
+  align-items: center;
+}
+.navbar-item {
+  margin: 0.4em;
+  width: 100%;
+}
+
+.home-link,
+.navbar-link {
+  color: var(--navbar-text-color);
+  text-decoration: none;
+  display: flex;
+  font-weight: 400;
+  align-items: center;
+}
+
+.home-link:is(:focus, :hover) {
+  color: var(--navbar-text-color-focus);
+}
+
+.navbar-link {
+  justify-content: center;
+  width: 100%;
+  padding: 0.4em 0.8em;
+  border-radius: 5px;
+}
+
+.navbar-link:is(:focus, :hover) {
+  color: var(--navbar-text-color-focus);
+  background-color: var(--navbar-bg-contrast);
+}
+.navbar-logo {
+  background-color: var(--navbar-text-color-focus);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  margin-right: 0.5em;
+}
+#navbar-toggle {
+  cursor: pointer;
+  border: none;
+  background-color: transparent;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+.icon-bar {
+  display: block;
+  width: 25px;
+  height: 4px;
+  margin: 2px;
+  background-color: var(--navbar-text-color);
+}
+#navbar-toggle:is(:focus, :hover) .icon-bar {
+  background-color: var(--navbar-text-color-focus);
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:is(:first-child, :last-child) {
+  position: absolute;
+  margin: 0;
+  width: 30px;
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:first-child {
+  transform: rotate(45deg);
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:nth-child(2) {
+  opacity: 0;
+}
+#navbar-toggle[aria-expanded="true"] .icon-bar:last-child {
+  transform: rotate(-45deg);
+}
+#navbar-menu {
+  position: fixed;
+  top: var(--navbar-height);
+  bottom: 0;
+  opacity: 0;
+  visibility: hidden;
+  left: 0;
+  right: 0;
+}
+#navbar-toggle[aria-expanded="true"] + #navbar-menu {
+  background-color: rgba(0, 0, 0, 0.4);
+  opacity: 1;
+  visibility: visible;
+}
+.navbar-links {
+  list-style: none;
+  position: absolute;
+  background-color: var(--navbar-bg-color);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  left: 0;
+  right: 0;
+  margin: 1.4rem;
+  border-radius: 5px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+#navbar-toggle[aria-expanded="true"] + #navbar-menu .navbar-links {
+  padding: 1em;
+}
+@media screen and (min-width: 700px) {
+  #navbar-toggle,
+  #navbar-toggle[aria-expanded="true"] {
+    display: none;
+  }
+
+  #navbar-menu,
+  #navbar-toggle[aria-expanded="true"] #navbar-menu {
+    visibility: visible;
+    opacity: 1;
+    position: static;
+    display: block;
+    height: 100%;
+  }
+
+  .navbar-links,
+  #navbar-toggle[aria-expanded="true"] #navbar-menu .navbar-links {
+    margin: 0;
+    padding: 0;
+    box-shadow: none;
+    position: static;
+    flex-direction: row;
+    width: 100%;
+    height: 100%;
+  }
+}
+
 
 </style>
 </head>
 <body>
 
     <!-- Start of the navbar-->
+    <!-- <header id="navbar">
+      <nav class="navbar-container container">
+        <a href="/" class="home-link">
+          <div class="navbar-logo"> <img src="" alt=""></div>
+          Raago Global Synergies LLP
+        </a>
+        <button type="button" id="navbar-toggle" aria-controls="navbar-menu" aria-label="Toggle menu" aria-expanded="false">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <div id="navbar-menu" aria-labelledby="navbar-toggle">
+          <ul class="navbar-links">
+            <li class="navbar-item"><a class="navbar-link" href="/about">About</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/blog">Blog</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/careers">Careers</a></li>
+            <li class="navbar-item"><a class="navbar-link" href="/contact">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <script>
+      const navbarToggle = navbar.querySelector("#navbar-toggle");
+const navbarMenu = document.querySelector("#navbar-menu");
+const navbarLinksContainer = navbarMenu.querySelector(".navbar-links");
+let isNavbarExpanded = navbarToggle.getAttribute("aria-expanded") === "true";
+
+const toggleNavbarVisibility = () => {
+  isNavbarExpanded = !isNavbarExpanded;
+  navbarToggle.setAttribute("aria-expanded", isNavbarExpanded);
+};
+
+navbarToggle.addEventListener("click", toggleNavbarVisibility);
+
+navbarLinksContainer.addEventListener("click", (e) => e.stopPropagation());
+navbarMenu.addEventListener("click", toggleNavbarVisibility);
+
+    </script> -->
     <nav class="navbar navbar-expand-lg d-flex justify-content-around fixed-top" style="background-color: rgb(255,255,255);">
       <div class="container-fluid">
-    <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\RGLOGO.png" alt="rg logo" class="nav-logo">
+    <img src="C:\Users\Asus\OneDrive\Desktop\Raj " alt="rg logo" class="nav-logo">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -164,7 +375,83 @@ nav button {
     <!-- End of the navbar -->
 
     <!-- Start of home section -->
-    
+    <div id="some-box">
+      <h1>About us</h1>
+
+      <article class="row" id="idea-one">
+        <div>
+          <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\about.jpg" />
+        </div>
+        <div>
+          <h3>Our Story</h3>
+          <p>
+            We always provide our customers with an excellent product or
+            service, one of quality to be proud of, that meets and exceeds their
+            expectations.
+          </p>
+        </div>
+      </article>
+
+      <article class="row" id="idea-two">
+        <div>
+          <h3>Team and Culture</h3>
+          <p>
+            For us, Integrity implies honesty and transparency in our business
+            processes and the highest level of ethical behaviour and
+            professional act in customer service.
+          </p>
+        </div>
+        <div>
+          <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\team.jpg" />
+        </div>
+      </article>
+
+      <article class="row" id="idea-three">
+        <div>
+          <img
+            src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\mission.jpg"
+          />
+        </div>
+        <div>
+          <h3>Our Mission</h3>
+          <p>
+            We are sincerely dedicated to our customers' concerns, hence we
+            promise solving your concerns or getting back to you round the
+            clock. We are here to serve you.
+          </p>
+        </div>
+      </article>
+
+      <article class="row" id="idea-four">
+        <div>
+          <h3>Our Vision</h3>
+          <p>
+            At RGS , we are committed to all our stakeholders adopting best
+            practices in business operations to honour our deliverables to every
+            person, entity or organization, associated with us.
+          </p>
+        </div>
+        <div>
+          <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\vision.jpg" />
+        </div>
+      </article>
+
+      <article class="row" id="idea-five">
+        <div>
+          <img
+            src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\comm-engagement.jpg"
+          />
+        </div>
+        <div>
+          <h3>Community Engagement</h3>
+          <p>
+            we believe that our responsibility as a member of society to create
+            value in society through improvement in health care, education and
+            caring for environment.
+          </p>
+        </div>
+      </article>
+    </div>
     <!-- End of home section  -->
 
 <br>
