--- a/Final/main.html
+++ b/Final/main.html
@@ -17,11 +17,11 @@
   <link rel="stylesheet" href="about.css" />
   <link rel="stylesheet" href="about1.css" />
   <link rel="stylesheet" href="service.css" />
-  <link rel="stylesheet" href="contact.css" />
+  <link rel="stylesheet" href="style.css" />
   <link rel="stylesheet" href="footer.css" />
 </head>
 
-<body>
+<body style="background-color:aliceblue;">
   <!-- Start of the Navbar  -->
   <header id="navbar">
     <nav class="navbar-container container">
@@ -100,12 +100,14 @@
 
   <br />
   <br />
+  <br />
+
 
   <main>
     <div id="About" class="imagesection" style="background-image: url(port-6670684_1920.jpg)">
       <div class="textoverlay">
         <h1 id="heading" class="animate__animated animate__fadeInLeft animate__slow">
-          Our Story
+          About Us
         </h1>
         <p id="para"></p>
       </div>
@@ -115,7 +117,7 @@
   <!-- Start of the About Section  -->
   <div class="cmp-container" style="border-style: solid; border-color: aqua; border-width: 1px">
     <div class="cmp-content">
-      <h1 style="font-size: 28px; font-weight: bold">About RGS LLP</h1>
+      <h1 style="font-size: 24px; font-weight: bold">RGS LLP</h1>
       <p class="m-info" style="text-align: left">
         Raago Global Synergies LLP Is A Promising Manufacturer, Exporter &
         Supplier Of Variety Of Products. It Is A One Of Top Destination For
@@ -131,7 +133,7 @@
       </p>
     </div>
     <div class="cmp-image">
-      <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\RGLOGO.png" alt="Image Description" />
+      <img style="border-radius: 20px;" src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\RGLOGO.png" alt="Image Description" />
     </div>
   </div>
 
@@ -202,24 +204,18 @@
   </div>
   <!-- End of the About Section  -->
 
-  <!-- Start of the service section -->
-  <main>
-    <div id="Service" class="imagesection" style="background-image: url(team.jpg)">
-      <div class="textoverlay">
-        <h1 id="heading" class="animate__animated animate__fadeInRight animate__slow">
-          Our Services
-        </h1>
-        <p id="para"></p>
-      </div>
-    </div>
-  </main>
+  <!-- Start of the Service Section -->
+  <div id="Service" class="service-head">
+    <h1 style="text-align: center;"> Our Services</h1>
+  </div>
+
   <div id="some-box">
     <article class="row" id="idea-one">
       <div>
         <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\excellenceimage.jpg" />
       </div>
       <div>
-        <h3>Excellence and quality</h3>
+        <h3>Excellence and Quality</h3>
         <p>
           We always provide our customers with an excellent product or
           service, one of quality to be proud of, that meets and exceeds their
@@ -287,8 +283,6 @@
   </div>
   <!-- End of the Service Section -->
 
-  <br />
-
   <!-- Start of the Contact Section -->
   <div class="contact-container" id="Contact">
     <div class="contact-content">
@@ -330,8 +324,6 @@
   <!-- End of the Contact Section -->
 
   <br />
-  <hr />
-
   <!-- Start of the Footer Section -->
   <footer>
     <div class="logo-container">
