--- a/Final/main.html
+++ b/Final/main.html
@@ -169,7 +169,7 @@
       </div>
     </article>
 
-    <article class="row" id="idea-four">
+    <!-- <article class="row" id="idea-four">
       <div>
         <h3>Our Vision</h3>
         <p>
@@ -184,7 +184,7 @@
       <div>
         <img src="C:\Users\Asus\OneDrive\Desktop\Raj Sir\images\vision.jpg" />
       </div>
-    </article>
+    </article> -->
 
     <article class="row" id="idea-five">
       <div>
